fix showTime